--- a/src/pages/PersonalMessagesPage/PersonalMessagesPage.css
+++ b/src/pages/PersonalMessagesPage/PersonalMessagesPage.css
@@ -1,6 +1,64 @@
-.picture {
-    border-radius: 50%; /* Makes the image round */
-    width: 30px; /* Adjust the size as needed */
-    height: 30px; /* Adjust the size as needed */
-    margin-left: 10px; /* Add spacing between the icon and the image */
+.personal-messages-container {
+    max-width: 600px;
+    margin: auto;
   }
+  
+  .messages-container {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .sent-message {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  
+  .received-message {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-bottom: 10px;
+  }
+  
+  .profile-picture {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+  }
+  
+  .message-content {
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #f2f2f2;
+  }
+  
+  .message-input {
+    width: calc(100% - 100px); /* Adjust width as needed */
+    margin-top: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .send-button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: magenta;
+    color: white;
+    cursor: pointer;
+  }
+  
+  .delete-button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: darkmagenta;
+    color: white;
+    cursor: pointer;
+  }
+ 
